--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This Node.js package facilitates the subscription process within the network. It includes hosting an HTML file and providing an on_subscribe endpoint.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "body-parser": "^1.20.2",
     "crypto": "^1.0.1",
     "express": "^4.19.2",
-    "libsodium-wrappers": "^0.7.14"
+    "libsodium-wrappers": "^0.7.14",
+    "nodemon": "^3.1.4"
   }
 }
