--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "crypto": "^1.0.1",
     "express": "^4.19.2",
     "libsodium-wrappers": "^0.7.14",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "volleyball": "^1.5.1"
   }
 }
